Fix nav on mobile

--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -43,9 +43,11 @@
         align-items: center;
         font-size: 1rem;
         font-weight: 500;
-        padding: 1rem 0.6rem;
+        padding: 1rem 0.3rem;
         margin: 0;
         color: #888;
+        line-height: 1.2;
+        text-align: center;
         &:hover,
         &:active {
           color: #111;
@@ -72,7 +74,7 @@
 button.dark-switcher {
   -webkit-appearance: none;
   border: 0;
-  padding: 0.25rem;
+  padding: 0.2rem;
   margin: 0 0.25rem 0.5rem 0;
   background: transparent;
   &:hover {
